<resources>
    <string name="app_name">LandscapeContacts</string>
    <string name="contactos">Contactos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_contact">Nuevo Contacto</string>
    <string name="name">Nombre</string>
    <string name="number">Numero</string>
    <string name="email">Email</string>
    <string name="add_contact"> + Añadir </string>
    <string name="title">Titulo</string>
    <string name="modi">Modificar</string>
    <string name="delete">Borrar</string>
    <string name="alert">Alerta</string>
    <string name="delete_contact">Borrar contacto.</string>
    <string name="add_contact2">Nuevo contacto creado</string>
    <string name="obligate_fields">Campos Obligatorios</string>
    <string name="contact_info">Informacion de Contacto</string>
    <string name="modi_contact">Modificar Contacto</string>
    <string name="cancel">Cancelar</string>
</resources>