<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddContact"
    android:background="@drawable/black_shape">

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias=".0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modi_contact"
            android:textColor="@color/Silver"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/divider_line_01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/white_shape_01"
        app:layout_constraintBottom_toTopOf="@id/name"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider_line_01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".1"
        android:background="@drawable/edittext"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/Silver"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias=".01" />

    <EditText
        android:id="@+id/title"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/title"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/Silver"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias=".02" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext"
        android:hint="@string/number"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/Silver"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias=".01" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/Silver"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:layout_constraintVertical_bias=".02" />

    <Button
        android:id="@+id/modify"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shape_button"
        android:text="@string/modi"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"

        />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shape_button_02"
        android:text="@string/cancel"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toEndOf="@id/modify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="5dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>