<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddContact"
    android:background="@drawable/black_shape">

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias=".0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_contact"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".1"
        android:background="@drawable/edittext"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintVertical_bias=".02"
        android:background="@drawable/edittext"/>

    <EditText
        android:id="@+id/number"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/number"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintVertical_bias=".02"
        android:background="@drawable/edittext"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintVertical_bias=".02"
        android:background="@drawable/edittext"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".02"/>


</androidx.constraintlayout.widget.ConstraintLayout>